--- a/_includes/latest-post.html
+++ b/_includes/latest-post.html
@@ -7,22 +7,22 @@
 
         {{ page.content | markdownify }}
 
-        {% assign post = site.posts.first %}
-        <h4> <strong> {{ post.date | date_to_string }} </strong>
+        {% for post in site.posts offset:3 %}
+        <!-- {% assign post = site.posts.first %} -->
+        <h4  style="text-transform: capitalize;"> <strong> {{ post.date | date_to_string }} </strong>
           <small>.
             <a class="category" href="{{site.baseurl}}/categories/{{post.category | downcase}}.html">
               {{ post.category }}
             </a>
           .</small>
           <strong> <a href="{{site.baseurl}}{{ post.url }}">{{post.title}} </a> </strong>
-          <small> <a href="{{site.baseurl}}{{post.url}}#disqus_thread">Comments</a></small>
         </h4>
-
-        <section class="text-justify">
+        {% endfor %}
+        <!-- <section class="text-justify">
           {{ post.content | strip_html | markdownify | truncatewords: site.post-preview-words }}
-        </section>
+        </section> -->
 
-        <h4><a href="{{site.baseurl}}/blog/">Archive</a></h4>
+        <h4  style="text-transform: capitalize;"><a href="{{site.baseurl}}/blog/">Archive</a></h4>
 
       </div>
     </div>
