--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
       {% if page.section-type == "index" %}
         <a class="navbar-brand page-scroll" href="#page-top">
       {% else %}
-        <a class="navbar-brand" href="{{site.baseurl}}/">
+        <a class="navbar-brand non-index-nav " href="{{site.baseurl}}/">
       {% endif %}
           <div>
             {% if site.black-favicon %}
@@ -38,12 +38,12 @@
             <li>
             {% if p[1] == "latest-post" %}
               {% if page.url == "/blog/index.html" | prepend: {{site.baseurl}} %}
-                <a class="page-scroll" href="#page"> {{p[0]}} </a>
+                <a class="non-index-nav" href="#page"> {{p[0]}} </a>
               {% else %}
-                <a href="{{site.baseurl}}/blog/"> {{p[0]}} </a>
+                <a class="non-index-nav" href="{{site.baseurl}}/blog/"> {{p[0]}} </a>
               {% endif %}
             {% else %}
-                <a href="{{site.baseurl}}/#{{ p[1] }}"> {{p[0]}} </a>
+                <a class="non-index-nav" href="{{site.baseurl}}/#{{ p[1] }}"> {{p[0]}} </a>
             {% endif %}
             </li>
           {% endfor %}
