--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,11 +20,10 @@
           <h4>
             <strong>{{ page.date | date_to_string }}</strong>
             <small>
-              . category:
+              category:
               <a class="category" href="{{site.baseurl}}/categories/{{page.category | downcase}}.html">
                 {{ page.category }}
               </a>.
-              <a href="{{site.baseurl}}{{page.url }}#disqus_thread">Comments</a>
               <br />
               {% for tag in page.tags %}
                 <a class="tag" href="{{site.baseurl}}/tags/{{tag | downcase}}.html">#{{ tag }}</a>
@@ -36,11 +35,11 @@
             {{ page.content | markdownify }}
           </section>
 
-          {% include share.html %}
 
           {% if jekyll.environment == "production" %}
             {% include comments.html %}
           {% endif %}
+
 
 
           <hr />
