Add post to page

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -22,6 +22,7 @@
             {% for post in site.posts %}
               {% for t in post.tags %}
                 {% capture tg %}{{ t | downcase }}{% endcapture %}
+                {% capture tag %}{{ tag | downcase }}{% endcapture %}
                 {% if tg == tag %}
                   {% include post-list.html%}
                 {% endif %}
