--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,9 @@
 
     <section id="post" class="container content-section text-center">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-11  posts">
 
-          {% include swipe-instructions.html %}
+  
 
           <h1><strong>{{ page.title }}</strong></h1>
           <h4>
