--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
               </a>.
               <br />
               {% for tag in page.tags %}
-                <a class="tag" href="{{site.baseurl}}/tags/{{tag | downcase}}.html">#{{ tag }}</a>
+                <a class="tag" href="{{site.baseurl}}/tags/{{tag}}.html">#{{ tag }}</a>
               {% endfor %}
             </small>
           </h4>
