--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
         <p style="font-size: 16px;"><a href="https://keybase.io/{{site.keybase-username}}" target="_blank"><i
                 class="fa fa-key"></i> {{site.keybase-username}} on Keybase</a></p>
         {% endif %}
-        <p>Powered by <a href="https://jekyllrb.com/">Jekyll</a>,  learned (stolen) from <a href="https://github.com/le4ker/personal-jekyll-theme/tree/master/">personal-jekyll-theme</a></p>
+        <p>Powered by <a href="https://jekyllrb.com/">Jekyll</a>,  learned from <a href="https://github.com/le4ker/personal-jekyll-theme/tree/master/">personal-jekyll-theme</a></p>
     </div>
 </footer>
 
