--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,8 +1,27 @@
-<section id="{{ page.section-type }}" class="container content-section text-center">
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-  
-        {{ page.content | markdownify }}
+
+<!-- Latest Post Preview Start -->
+
+<section id="{{ page.section-type }}" class="container content-section">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+
+      {{ page.content | markdownify }}
+      <br>
+      {% for pub in site.data.publication %}
+      <div style="overflow: auto; margin-top: 40px;">
+          <div style="float:left; width:70%;">
+              {{ pub.name | markdownify }}
+              {{ pub.authors | markdownify }}
+              {{ pub.venue| markdownify }}
+              <!-- <p align="left"> {{ proj.description }} </p> -->
+          </div>
+
       </div>
+
+      {% endfor %}
+
     </div>
+  </div>
 </section>
+
+<!-- Latest Post Preview End -->
